Refatoração final para site de links curtos 'super complexo e bonito' com design Cyberpunk Premium.

--- a/index.html
+++ b/index.html
@@ -3,39 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sakibites Bots - Links Rápidos</title>
+    <title>Sakibites Bots - Nexus de Convites</title>
     <link rel="stylesheet" href="style.css">
     <!-- Fonte Inter -->
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&display=swap" rel="stylesheet">
-    <!-- Ícones Font Awesome para o Discord -->
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800;900&display=swap" rel="stylesheet">
+    <!-- Ícones Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 <body>
     <div class="main-container">
-        <h1>Sakibites Bots</h1>
-        <p class="subtitle">Seus links rápidos para convidar Modi e Musicat para o seu servidor Discord.</p>
+        <h1>Sakibites Bot Nexus</h1>
+        <p class="subtitle">Acesso direto aos nossos bots mais poderosos. Clique para convidar e transformar seu servidor.</p>
 
         <div class="bots-grid">
             <!-- Card Modi -->
             <div class="bot-card">
-                <span class="icon"><i class="fas fa-shield-alt"></i></span>
-                <h2>Modi</h2>
-                <p>O bot de moderação automática inteligente para manter seu servidor seguro e organizado.</p>
-                <a href="/Modi" class="btn">Convidar Modi</a>
+                <div class="bot-card-content">
+                    <span class="icon"><i class="fas fa-shield-alt"></i></span>
+                    <h2>MODI</h2>
+                    <p>O Módulo de Operações de Defesa Inteligente. Segurança, moderação e filtragem automática de conteúdo de elite.</p>
+                    <a href="/Modi" class="btn">CONVIDAR MODI</a>
+                </div>
             </div>
 
             <!-- Card Musicat -->
             <div class="bot-card">
-                <span class="icon"><i class="fas fa-music"></i></span>
-                <h2>Musicat</h2>
-                <p>O DJ felino que traz música de alta qualidade para seus canais de voz.</p>
-                <a href="/Musicat" class="btn">Convidar Musicat</a>
+                <div class="bot-card-content">
+                    <span class="icon"><i class="fas fa-music"></i></span>
+                    <h2>MUSICAT</h2>
+                    <p>Seu DJ felino pessoal. Música de alta fidelidade, suporte a múltiplas fontes e comandos intuitivos.</p>
+                    <a href="/Musicat" class="btn">CONVIDAR MUSICAT</a>
+                </div>
             </div>
         </div>
     </div>
 
     <footer class="footer">
-        <p>Desenvolvido com ❤️ em HTML e CSS puros | Sakibites © 2025</p>
+        <p>Desenvolvido com ❤️ e Estilo Cyberpunk em HTML/CSS Puro | Sakibites © 2025</p>
     </footer>
 </body>
 </html>
