Change title from 'Sakibites Bot Nexus' to 'Cookies center'

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="main-container">
-        <h1>Sakibites Bot Nexus</h1>
+        <h1>Cookies center</h1>
         <p class="subtitle">Acesso direto aos nossos bots mais poderosos. Clique para convidar e transformar seu servidor.</p>
 
         <div class="bots-grid">
