--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
                     <span class="logo-icon">🍪</span>
                     <span class="logo-text">Cokies Bots</span>
                 </div>
-                <ul class="nav-links">
+                <div class="nav-toggle" id="navToggle">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+                <ul class="nav-links" id="navLinks">
                     <li><a href="#home" class="nav-link">Início</a></li>
                     <li><a href="#bots" class="nav-link">Bots</a></li>
                     <li><a href="#features" class="nav-link">Recursos</a></li>
@@ -27,14 +32,37 @@
 
     <!-- Hero Section -->
     <section id="home" class="hero">
+        <div class="stars"></div>
         <div class="container">
             <div class="hero-content">
-                <h1 class="hero-title">Bem-vindo ao Cokies Bots</h1>
-                <p class="hero-subtitle">Bots Discord profissionais e poderosos para sua comunidade</p>
-                <p class="hero-description">Descubra Modi e Musicat - dois bots incríveis para moderação e música</p>
-                <div class="hero-buttons">
-                    <a href="#bots" class="btn btn-primary">Explorar Bots</a>
-                    <a href="#features" class="btn btn-secondary">Ver Recursos</a>
+                <div class="hero-text">
+                    <h1 class="hero-title">
+                        <span class="title-gradient">Bem-vindo ao</span>
+                        <span class="title-anime">Cokies Bots</span>
+                    </h1>
+                    <p class="hero-subtitle">Bots Discord Incríveis para sua Comunidade</p>
+                    <p class="hero-description">Descubra Modi e Musicat - dois bots poderosos com estilo anime</p>
+                    <div class="hero-buttons">
+                        <a href="#bots" class="btn btn-primary">
+                            <span class="btn-icon">✨</span>
+                            Explorar Bots
+                        </a>
+                        <a href="#features" class="btn btn-secondary">
+                            <span class="btn-icon">⚡</span>
+                            Ver Recursos
+                        </a>
+                    </div>
+                </div>
+                <div class="hero-visual">
+                    <div class="floating-card card-1">
+                        <div class="card-icon">🤖</div>
+                        <div class="card-text">Modi</div>
+                    </div>
+                    <div class="floating-card card-2">
+                        <div class="card-icon">🎵</div>
+                        <div class="card-text">Musicat</div>
+                    </div>
+                    <div class="animated-bg"></div>
                 </div>
             </div>
         </div>
@@ -43,58 +71,67 @@
     <!-- Bots Section -->
     <section id="bots" class="bots-section">
         <div class="container">
-            <h2 class="section-title">Nossos Bots</h2>
+            <h2 class="section-title">
+                <span class="title-highlight">Nossos Bots Incríveis</span>
+            </h2>
             <div class="bots-grid">
                 <!-- Modi Bot Card -->
                 <div class="bot-card">
+                    <div class="card-glow"></div>
                     <div class="bot-header">
-                        <div class="bot-icon">🤖</div>
+                        <div class="bot-icon-wrapper">
+                            <div class="bot-icon">🤖</div>
+                        </div>
                         <h3 class="bot-name">Modi</h3>
                         <p class="bot-status">Bot de Moderação</p>
                     </div>
                     <div class="bot-description">
-                        <p>Modi é um bot de moderação avançado com filtros inteligentes, auto-reações e gerenciamento premium.</p>
+                        <p>Modi é um bot de moderação avançado com filtros inteligentes, auto-reações e gerenciamento premium. Perfeito para manter sua comunidade segura!</p>
                     </div>
                     <div class="bot-commands">
-                        <h4>Comandos Principais:</h4>
+                        <h4>📋 Comandos Principais:</h4>
                         <ul>
                             <li><code>/setup</code> - Configuração rápida do bot</li>
                             <li><code>/quickfilter</code> - Configuração rápida de filtros</li>
                             <li><code>/setfilter</code> - Define filtro de moderação</li>
                             <li><code>/viewfilters</code> - Visualiza filtros ativos</li>
                             <li><code>/check_premium</code> - Verifica status Premium</li>
-                            <li><code>/grant_premium</code> - Concede Premium (Owner)</li>
-                            <li><code>/revoke_premium</code> - Revoga Premium (Owner)</li>
                         </ul>
                     </div>
                     <div class="bot-features">
-                        <h4>Recursos:</h4>
+                        <h4>✨ Recursos:</h4>
                         <ul>
-                            <li>✅ Filtros de Mídia, Texto e Links</li>
-                            <li>✅ Auto-Reações Automáticas</li>
-                            <li>✅ Sistema Premium com Limites</li>
-                            <li>✅ Gerenciamento de Permissões</li>
-                            <li>✅ Estatísticas em Tempo Real</li>
+                            <li><span class="feature-badge">✅</span> Filtros de Mídia, Texto e Links</li>
+                            <li><span class="feature-badge">✅</span> Auto-Reações Automáticas</li>
+                            <li><span class="feature-badge">✅</span> Sistema Premium com Limites</li>
+                            <li><span class="feature-badge">✅</span> Gerenciamento de Permissões</li>
+                            <li><span class="feature-badge">✅</span> Estatísticas em Tempo Real</li>
                         </ul>
                     </div>
                     <div class="bot-invite">
-                        <a href="javascript:void(0)" onclick="redirectToModi()" class="btn btn-invite">Convidar Modi</a>
+                        <a href="javascript:void(0)" onclick="redirectToModi()" class="btn btn-invite">
+                            <span class="btn-icon">🚀</span>
+                            Convidar Modi
+                        </a>
                         <p class="invite-shortcut">Ou use: <code>/modi</code></p>
                     </div>
                 </div>
 
                 <!-- Musicat Bot Card -->
                 <div class="bot-card">
+                    <div class="card-glow"></div>
                     <div class="bot-header">
-                        <div class="bot-icon">🎵</div>
+                        <div class="bot-icon-wrapper">
+                            <div class="bot-icon">🎵</div>
+                        </div>
                         <h3 class="bot-name">Musicat</h3>
                         <p class="bot-status">Bot de Música</p>
                     </div>
                     <div class="bot-description">
-                        <p>Musicat é um bot de música avançado com busca inteligente no SoundCloud e download de MP3.</p>
+                        <p>Musicat é um bot de música avançado com busca inteligente no SoundCloud e download de MP3. Sua trilha sonora perfeita!</p>
                     </div>
                     <div class="bot-commands">
-                        <h4>Comandos Principais:</h4>
+                        <h4>📋 Comandos Principais:</h4>
                         <ul>
                             <li><code>/play</code> - Busca múltiplas versões de músicas</li>
                             <li><code>/fast</code> - Download rápido da primeira versão</li>
@@ -103,17 +140,20 @@
                         </ul>
                     </div>
                     <div class="bot-features">
-                        <h4>Recursos:</h4>
+                        <h4>✨ Recursos:</h4>
                         <ul>
-                            <li>✅ Busca Avançada no SoundCloud</li>
-                            <li>✅ Múltiplas Estratégias de Busca</li>
-                            <li>✅ Download de MP3 até 25MB</li>
-                            <li>✅ Detecção de Versões (Slow, Speed, Remix)</li>
-                            <li>✅ Ordenação por Popularidade</li>
+                            <li><span class="feature-badge">✅</span> Busca Avançada no SoundCloud</li>
+                            <li><span class="feature-badge">✅</span> Múltiplas Estratégias de Busca</li>
+                            <li><span class="feature-badge">✅</span> Download de MP3 até 25MB</li>
+                            <li><span class="feature-badge">✅</span> Detecção de Versões (Slow, Speed, Remix)</li>
+                            <li><span class="feature-badge">✅</span> Ordenação por Popularidade</li>
                         </ul>
                     </div>
                     <div class="bot-invite">
-                        <a href="javascript:void(0)" onclick="redirectToMusicat()" class="btn btn-invite">Convidar Musicat</a>
+                        <a href="javascript:void(0)" onclick="redirectToMusicat()" class="btn btn-invite">
+                            <span class="btn-icon">🚀</span>
+                            Convidar Musicat
+                        </a>
                         <p class="invite-shortcut">Ou use: <code>/musicat</code></p>
                     </div>
                 </div>
@@ -124,35 +164,49 @@
     <!-- Features Section -->
     <section id="features" class="features-section">
         <div class="container">
-            <h2 class="section-title">Por Que Escolher Nossos Bots?</h2>
+            <h2 class="section-title">
+                <span class="title-highlight">Por Que Escolher Nossos Bots?</span>
+            </h2>
             <div class="features-grid">
                 <div class="feature-card">
-                    <div class="feature-icon">⚡</div>
+                    <div class="feature-icon-wrapper">
+                        <div class="feature-icon">⚡</div>
+                    </div>
                     <h3>Rápido e Eficiente</h3>
                     <p>Processamento instantâneo com respostas em tempo real para melhor experiência do usuário.</p>
                 </div>
                 <div class="feature-card">
-                    <div class="feature-icon">🔒</div>
+                    <div class="feature-icon-wrapper">
+                        <div class="feature-icon">🔒</div>
+                    </div>
                     <h3>Seguro</h3>
                     <p>Bots confiáveis com sistema de permissões robusto e proteção de dados.</p>
                 </div>
                 <div class="feature-card">
-                    <div class="feature-icon">🎯</div>
+                    <div class="feature-icon-wrapper">
+                        <div class="feature-icon">🎯</div>
+                    </div>
                     <h3>Personalizável</h3>
                     <p>Configure cada aspecto dos bots de acordo com suas necessidades específicas.</p>
                 </div>
                 <div class="feature-card">
-                    <div class="feature-icon">💎</div>
+                    <div class="feature-icon-wrapper">
+                        <div class="feature-icon">💎</div>
+                    </div>
                     <h3>Premium</h3>
                     <p>Acesso a recursos premium com limites expandidos e funcionalidades exclusivas.</p>
                 </div>
                 <div class="feature-card">
-                    <div class="feature-icon">🚀</div>
+                    <div class="feature-icon-wrapper">
+                        <div class="feature-icon">🚀</div>
+                    </div>
                     <h3>Sempre Atualizado</h3>
                     <p>Novos recursos e melhorias adicionadas regularmente para melhor desempenho.</p>
                 </div>
                 <div class="feature-card">
-                    <div class="feature-icon">👥</div>
+                    <div class="feature-icon-wrapper">
+                        <div class="feature-icon">👥</div>
+                    </div>
                     <h3>Comunidade Ativa</h3>
                     <p>Suporte dedicado e comunidade vibrante de usuários sempre pronta para ajudar.</p>
                 </div>
@@ -163,16 +217,20 @@
     <!-- Shortcut Section -->
     <section class="shortcut-section">
         <div class="container">
-            <h2 class="section-title">Atalhos Rápidos</h2>
+            <h2 class="section-title">
+                <span class="title-highlight">Atalhos Rápidos</span>
+            </h2>
             <p class="shortcut-description">Use os comandos abaixo para convidar os bots instantaneamente:</p>
             <div class="shortcuts-grid">
                 <div class="shortcut-card">
-                    <h3>Convidar Modi</h3>
+                    <div class="shortcut-glow"></div>
+                    <h3>🤖 Convidar Modi</h3>
                     <code class="shortcut-code">/modi</code>
                     <p>Redireciona para o link de convite do Modi</p>
                 </div>
                 <div class="shortcut-card">
-                    <h3>Convidar Musicat</h3>
+                    <div class="shortcut-glow"></div>
+                    <h3>🎵 Convidar Musicat</h3>
                     <code class="shortcut-code">/musicat</code>
                     <p>Redireciona para o link de convite do Musicat</p>
                 </div>
@@ -183,7 +241,9 @@
     <!-- Contact Section -->
     <section id="contact" class="contact-section">
         <div class="container">
-            <h2 class="section-title">Entre em Contato</h2>
+            <h2 class="section-title">
+                <span class="title-highlight">Entre em Contato</span>
+            </h2>
             <div class="contact-content">
                 <p>Tem dúvidas ou sugestões? Estamos aqui para ajudar!</p>
                 <div class="contact-links">
