feat: Novo design Hello Kitty para o site dos bots

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="container">
             <div class="navbar-content">
                 <div class="logo">
-                    <span class="logo-icon">🍪</span>
+                    <span class="logo-icon">🎀</span>
                     <span class="logo-text">Cokies Bots</span>
                 </div>
                 <div class="nav-toggle" id="navToggle">
@@ -32,7 +32,6 @@
 
     <!-- Hero Section -->
     <section id="home" class="hero">
-        <div class="stars"></div>
         <div class="container">
             <div class="hero-content">
                 <div class="hero-text">
@@ -40,29 +39,28 @@
                         <span class="title-gradient">Bem-vindo ao</span>
                         <span class="title-anime">Cokies Bots</span>
                     </h1>
-                    <p class="hero-subtitle">Bots Discord Incríveis para sua Comunidade</p>
-                    <p class="hero-description">Descubra Modi e Musicat - dois bots poderosos com estilo anime</p>
+                    <p class="hero-subtitle">Bots Discord Mais Fofos e Poderosos!</p>
+                    <p class="hero-description">Descubra Modi e Musicat - seus novos amigos robóticos com um toque kawaii!</p>
                     <div class="hero-buttons">
                         <a href="#bots" class="btn btn-primary">
-                            <span class="btn-icon">✨</span>
+                            <span class="btn-icon">🎀</span>
                             Explorar Bots
                         </a>
                         <a href="#features" class="btn btn-secondary">
-                            <span class="btn-icon">⚡</span>
+                            <span class="btn-icon">💖</span>
                             Ver Recursos
                         </a>
                     </div>
                 </div>
                 <div class="hero-visual">
                     <div class="floating-card card-1">
-                        <div class="card-icon">🤖</div>
-                        <div class="card-text">Modi</div>
+                        <img src="assets/icon_hk.jpg" alt="Modi Icon" style="width: 80px; height: 80px; border-radius: 50%;">
+                        <div class="card-text">Modi Kawaii</div>
                     </div>
                     <div class="floating-card card-2">
-                        <div class="card-icon">🎵</div>
-                        <div class="card-text">Musicat</div>
+                        <img src="assets/icon_hk.jpg" alt="Musicat Icon" style="width: 80px; height: 80px; border-radius: 50%;">
+                        <div class="card-text">Musicat Fofo</div>
                     </div>
-                    <div class="animated-bg"></div>
                 </div>
             </div>
         </div>
@@ -72,12 +70,11 @@
     <section id="bots" class="bots-section">
         <div class="container">
             <h2 class="section-title">
-                <span class="title-highlight">Nossos Bots Incríveis</span>
+                <span class="title-highlight">Nossos Bots Fofinhos</span>
             </h2>
             <div class="bots-grid">
                 <!-- Modi Bot Card -->
                 <div class="bot-card">
-                    <div class="card-glow"></div>
                     <div class="bot-header">
                         <div class="bot-icon-wrapper">
                             <div class="bot-icon">🤖</div>
@@ -86,7 +83,7 @@
                         <p class="bot-status">Bot de Moderação</p>
                     </div>
                     <div class="bot-description">
-                        <p>Modi é um bot de moderação avançado com filtros inteligentes, auto-reações e gerenciamento premium. Perfeito para manter sua comunidade segura!</p>
+                        <p>Modi é um bot de moderação avançado com filtros inteligentes, auto-reações e gerenciamento premium. Mantém sua comunidade segura com um sorriso!</p>
                     </div>
                     <div class="bot-commands">
                         <h4>📋 Comandos Principais:</h4>
@@ -119,7 +116,6 @@
 
                 <!-- Musicat Bot Card -->
                 <div class="bot-card">
-                    <div class="card-glow"></div>
                     <div class="bot-header">
                         <div class="bot-icon-wrapper">
                             <div class="bot-icon">🎵</div>
@@ -128,7 +124,7 @@
                         <p class="bot-status">Bot de Música</p>
                     </div>
                     <div class="bot-description">
-                        <p>Musicat é um bot de música avançado com busca inteligente no SoundCloud e download de MP3. Sua trilha sonora perfeita!</p>
+                        <p>Musicat é um bot de música avançado com busca inteligente no SoundCloud e download de MP3. Sua trilha sonora perfeita com um toque de fofura!</p>
                     </div>
                     <div class="bot-commands">
                         <h4>📋 Comandos Principais:</h4>
@@ -170,7 +166,7 @@
             <div class="features-grid">
                 <div class="feature-card">
                     <div class="feature-icon-wrapper">
-                        <div class="feature-icon">⚡</div>
+                        <div class="feature-icon">🍬</div>
                     </div>
                     <h3>Rápido e Eficiente</h3>
                     <p>Processamento instantâneo com respostas em tempo real para melhor experiência do usuário.</p>
@@ -184,7 +180,7 @@
                 </div>
                 <div class="feature-card">
                     <div class="feature-icon-wrapper">
-                        <div class="feature-icon">🎯</div>
+                        <div class="feature-icon">🎨</div>
                     </div>
                     <h3>Personalizável</h3>
                     <p>Configure cada aspecto dos bots de acordo com suas necessidades específicas.</p>
@@ -198,14 +194,14 @@
                 </div>
                 <div class="feature-card">
                     <div class="feature-icon-wrapper">
-                        <div class="feature-icon">🚀</div>
+                        <div class="feature-icon">✨</div>
                     </div>
                     <h3>Sempre Atualizado</h3>
                     <p>Novos recursos e melhorias adicionadas regularmente para melhor desempenho.</p>
                 </div>
                 <div class="feature-card">
                     <div class="feature-icon-wrapper">
-                        <div class="feature-icon">👥</div>
+                        <div class="feature-icon">💖</div>
                     </div>
                     <h3>Comunidade Ativa</h3>
                     <p>Suporte dedicado e comunidade vibrante de usuários sempre pronta para ajudar.</p>
@@ -218,18 +214,16 @@
     <section class="shortcut-section">
         <div class="container">
             <h2 class="section-title">
-                <span class="title-highlight">Atalhos Rápidos</span>
+                <span class="title-highlight">Atalhos Fofos</span>
             </h2>
             <p class="shortcut-description">Use os comandos abaixo para convidar os bots instantaneamente:</p>
             <div class="shortcuts-grid">
                 <div class="shortcut-card">
-                    <div class="shortcut-glow"></div>
-                    <h3>🤖 Convidar Modi</h3>
+                    <h3>🎀 Convidar Modi</h3>
                     <code class="shortcut-code">/modi</code>
                     <p>Redireciona para o link de convite do Modi</p>
                 </div>
                 <div class="shortcut-card">
-                    <div class="shortcut-glow"></div>
                     <h3>🎵 Convidar Musicat</h3>
                     <code class="shortcut-code">/musicat</code>
                     <p>Redireciona para o link de convite do Musicat</p>
@@ -245,7 +239,7 @@
                 <span class="title-highlight">Entre em Contato</span>
             </h2>
             <div class="contact-content">
-                <p>Tem dúvidas ou sugestões? Estamos aqui para ajudar!</p>
+                <p>Tem dúvidas ou sugestões? Estamos aqui para ajudar com muito carinho!</p>
                 <div class="contact-links">
                     <a href="https://discord.gg/cokies" class="contact-link" target="_blank">
                         <span class="contact-icon">💬</span>
@@ -264,7 +258,7 @@
     <footer class="footer">
         <div class="container">
             <div class="footer-content">
-                <p>&copy; 2024 Cokies Bots. Todos os direitos reservados.</p>
+                <p>&copy; 2024 Cokies Bots. Feito com muito amor! 💖</p>
                 <p>Desenvolvido com ❤️ para a comunidade Discord</p>
             </div>
         </div>
