Update footer text in index.html
Removed the mention of 'Desenvolvido com HTML, CSS e JS Puros.' from the footer.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <footer id="main-footer">
         <div class="container">
-            <p>&copy; 2025 Cokies Bots. Todos os direitos reservados. | Desenvolvido com HTML, CSS e JS Puros.</p>
+            <p>&copy; 2025 Cokies Bots. Todos os direitos reservados.</p>
         </div>
     </footer>
 
